# 3D_Lantern

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  MD_Texture.h  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: color.h.B802CC1753D8B5B4.idx  color_test.cpp.1945A7B35F4FD732.idx  glad.c.448AED577051E7A6.idx  glad.h.671966C9E8E92E85.idx  interval.h.57A4C569D5A27253.idx  interval_test.cpp.22B50F4FB0E5387B.idx  khrplatform.h.86262CF830DBC85D.idx  mat4.h.882166FC2B42C226.idx  mat4_test.cpp.F2488B3C78BDBD21.idx  point3.h.56F9196907E82EC3.idx  point3_test.cpp.C3048E7B35ABA8D7.idx  transform.h.DBD3F38C34607470.idx  transform_test.cpp.ACC8194D478CA237.idx  vec2.h.027D0DAE14C83BA7.idx  vec2_test.cpp.6E515F792EFBCC9E.idx  vec3.h.1F206081EC6204E1.idx  vec3_test.cpp.656A023BC91ABD50.idx  vec4.h.C0B0045DCE1F612B.idx  vec4_test.cpp.71275477B213E98A.idx
buildbin/test/: application_test  color_test  interval_test  lexer_extern_file_test  lexer_test  mat4_test  md_camera_test  md_mesh_test  md_serialize_test  model_test  parsed_scene_log_test  point3_test  rt_camera_test  rt_objectlist_test  rt_renderer_test  rt_sphere_test  transform_test  vec2_test  vec3_test  vec4_test
docs/: Doxyfile
example/: CMakeLists.txt  CTestTestfile.cmake  Makefile  boxes.cpp  clouds.cpp  cmake_install.cmake  mirror.cpp  mirror_chamber.cpp  perlin_scene.cpp  planar.cpp  serializer_test.lnt  sphere_cylindre.cpp  sphere_cylindre_cone.cpp  sphere_cylindre_cone.lnt  teapot.cpp  transforms_showcase.cpp
shaders/: grid_shader.fs  grid_shader.vs  light_Shaders.fs  light_Shaders.vs  light_Source_Shaders.fs  light_Source_Shaders.vs  pick_shader.fs  pick_shader.vs  shader.fs  shader.vs  trs_shader.fs  trs_shader.vs
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Scene.h  cmake_install.cmake  lantern.cpp  lantern3D.cpp
src/application/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Scene.cpp  Scene.h  Window.cpp  Window.h  Window1.cpp  app.cpp  app.h  cmake_install.cmake  controller.cpp  controller.h  gui.cpp  gui.h  input.cpp  inputs.h
src/assets/: :wq  CMakeLists.txt  CTestTestfile.cmake  Makefile  Model.cpp  Model.h  Texture.h  checker_texture.cpp  checker_texture.h  cmake_install.cmake  color_texture.cpp  color_texture.h  image.cpp  image.h  image_texture.cpp  image_texture.h  mesh_data.cpp  mesh_data.h  model.cpp  model.h  model_list.h  perlin.cpp  perlin.h  perlin_texture.cpp  perlin_texture.h  registry.h  shared_resources.h  texture.h  vertex.h
src/interpreter/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  interpreter.cpp  interpreter.h  keyword_map.h  lexer.cpp  lexer.h  parser.cpp  scene_descriptor.h  scene_descriptor_logger.h  scene_serializer.cpp  scene_serializer.h  token.h
src/interpretor/: CMakeLists.txt  keyword_map.h  lexer.cpp  lexer.h  parser.cpp  parser.h  scene_descriptor.h  token.h
src/math/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TRS_data.h  TRS_transform.h  bounding_box.h  cmake_install.cmake  color.h  interval.h  mat4.h  point3.h  ray.h  transform.h  utility.h  vec2.h  vec3.h  vec4.h
src/modeling/: CMakeLists.txt  CTestTestfile.cmake  MD_Box.cpp  MD_Box.h  MD_Camera.cpp  MD_Camera.h  MD_Circle.cpp  MD_Circle.h  MD_Cone.cpp  MD_Cone.h  MD_Cube.cpp  MD_Cube.h  MD_Cylinder.cpp  MD_Cylinder.h  MD_Disk.cpp  MD_Disk.h  MD_Light.cpp  MD_Light.h  MD_Material.cpp  MD_Material.h  MD_Mesh.cpp  MD_Mesh.h  MD_ModelShape.cpp  MD_ModelShape.h  MD_Object.cpp  MD_Object.h  MD_PointLight.h  MD_Quad.cpp  MD_Quad.h  MD_Renderer.cpp  MD_Renderer.h  MD_Scene.cpp  MD_Scene.h  MD_Shader.cpp  MD_Shader.h  MD_Shape.h  MD_Sphere.cpp  MD_Sphere.h  MD_Texture.cpp  MD_Texture.h  (+8 more)
src/modeling/MD_camera/: CMakeLists.txt  MD_Camera.h
src/modeling/MD_mesh/: MD_Mesh.cpp  MD_Mesh.h
src/modeling/MD_shader/: MD_Shader.h
src/ray_tracer/: CMakeLists.txt  CTestTestfile.cmake  Makefile  RT_BVH.cpp  RT_BVH.h  RT_Box.cpp  RT_Box.h  RT_Camera.cpp  RT_Camera.h  RT_Cone.cpp  RT_Cone.h  RT_Cylinder.cpp  RT_Cylinder.h  RT_Dielectric.cpp  RT_Dielectric.h  RT_DirectionalLight.cpp  RT_DirectionalLight.h  RT_Disk.cpp  RT_Disk.h  RT_Isotropic.cpp  RT_Isotropic.h  RT_Lambertian.cpp  RT_Lambertian.h  RT_Light.h  RT_Material.h  RT_Medium.cpp  RT_Medium.h  RT_Mesh.cpp  RT_Mesh.h  RT_Metalic.cpp  RT_Metalic.h  RT_Metallic.cpp  RT_Metallic.h  RT_Object.h  RT_ObjectList.cpp  RT_ObjectList.h  RT_PointLight.cpp  RT_PointLight.h  RT_Quad.cpp  RT_Quad.h  (+12 more)
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test/application_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  application_test.cpp  cmake_install.cmake  shader.fs  shader.vs
test/assets_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  model_test.cpp
test/interpreter_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lexer_extern_file_test.cpp  lexer_test.cpp  parsed_scene_log_test.cpp
test/interpretor_test/: CMakeLists.txt  lex_test_code.lnt  lexer_extern_file_test.cpp  lexer_test.cpp
test/math_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  color_test.cpp  interval_test.cpp  mat4_test.cpp  point3_test.cpp  transform_test.cpp  vec2_test.cpp  vec3_test.cpp  vec4_test.cpp
test/modeling/: mesh_test.cpp
test/modeling_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  camera_test.cpp  cmake_install.cmake  md_mesh_test.cpp  md_serialize_test.cpp
test/raytracer_test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  rt_camera_test.cpp  rt_objectlist_test.cpp  rt_renderer_test.cpp  rt_sphere_test.cpp
